Don't throw an exception if asked for nsIDOMPopupBlockedEvent properties on a non-popupblocked event.  Bug 204138, r=danm, sr=jst, a=asa.